syntax = "proto3";

package links_read;

option go_package = "links-service/proto";

service LinksServiceRead {
  rpc GetLink(GetLinkRequest) returns (GetLinkResponse) {}
  rpc GetCustomerLinks(GetCustomerLinksRequest) returns (GetCustomerLinksResponse) {}
}

message GetLinkRequest {
  string short_url = 1;
}

message GetLinkResponse {
  string id = 1;
  string original_url = 2;
  string short_url = 3;
  string custom_slug = 4;
  int32 clicks = 5;
  string created_at = 6;
  string updated_at = 7;
  optional string expiration_date = 8;
}

message GetCustomerLinksRequest {
  string customer_id = 1;
  optional int32 limit = 2;
  optional int32 offset = 3;
  optional string search = 4;
  optional string status = 5;
  optional string slug_type = 6;
  optional string sort_by = 7;
  optional string sort_direction = 8;
}

message GetCustomerLinksResponse {
  repeated GetLinkResponse links = 1;
}
